--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,17 +21,46 @@ jobs:
         with:
           dotnet-version: '9.0.x'
 
+      - name: Extract version from build.yaml
+        id: get_version
+        run: |
+          VERSION=$(grep '^version:' build.yaml | sed 's/version: "\(.*\)"/\1/')
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          echo "Version: $VERSION"
+
       - name: Restore dependencies
         run: dotnet restore
 
       - name: Build Release
         run: dotnet build Jellyfin.Plugin.DownloadMonitor/Jellyfin.Plugin.DownloadMonitor.csproj --configuration Release --no-restore
 
+      - name: Create meta.json
+        run: |
+          cat > meta.json << EOF
+          {
+            "category": "General",
+            "guid": "4344669f-555b-4525-b86f-d66dbb9ae81b",
+            "name": "Download Monitor",
+            "description": "A Jellyfin plugin that adds a Downloads menu item to the sidebar, allowing you to monitor active downloads from Radarr directly within the Jellyfin web interface.",
+            "owner": "Kyandro",
+            "overview": "Monitor and display Radarr download progress in Jellyfin",
+            "versions": [{
+              "version": "${{ env.VERSION }}",
+              "changelog": "Initial release",
+              "targetAbi": "10.11.0.0",
+              "sourceUrl": "https://github.com/kyandro-voet/Jellyfin-Plugin-Download-Status/releases/download/v${{ env.VERSION }}/download-monitor-${{ env.VERSION }}.zip",
+              "checksum": "",
+              "timestamp": "$(date -u +%Y-%m-%dT%H:%M:%SZ)"
+            }]
+          }
+          EOF
+
       - name: Create plugin zip
         run: |
           mkdir -p artifacts
           cd Jellyfin.Plugin.DownloadMonitor/bin/Release/net9.0
-          zip -j ../../../../artifacts/download-monitor-${{ env.VERSION }}.zip Jellyfin.Plugin.DownloadMonitor.dll
+          cp ../../../../meta.json .
+          zip -j ../../../../artifacts/download-monitor-${{ env.VERSION }}.zip Jellyfin.Plugin.DownloadMonitor.dll meta.json
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
